--- a/base-android/src/main/res/values/themes.xml
+++ b/base-android/src/main/res/values/themes.xml
@@ -1,16 +1,62 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Aphid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+
+    <!--Top level DayNight theme to be used in AndroidManifest.xml-->
+    <style name="Theme.Aphid" parent="Base.Theme.Aphid"/>
+    <!--Base custom theme which will be shared between both light and dark theme variants-->
+    <style name="Base.Theme.Aphid" parent="Base.Theme.MaterialThemeBuilder">
+        <!--Material color attributes (light theme) -->
+        <!--colorPrimary colors map to components and elements, such as app bars and buttons. -->
+        <!--colorSecondary colors are most often used as accents on components, such as FABs and -->
+        <!--selection controls.-->
+        <item name="colorPrimary">@color/deep_orange_a200</item>
+        <item name="colorPrimaryVariant">@color/amber_500</item>
+        <item name="colorSecondary">@color/green_a200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!--colorBackground appears behind scrollable content and is used for the default window-->
+        <!--background. colorSurface is mapped to the surface of components such as cards, sheets-->
+        <!--and menus. colorError is used to indicate an error state for components such as-->
+        <!--text fields.-->
+        <item name="android:colorBackground">@color/white_50</item>
+        <item name="colorSurface">@color/white_50</item>
+        <item name="colorError">@color/red_600</item>
+        <!--"On" colors define how text, icons and strokes are colored in relation to the surface-->
+        <!--on which they appear.-->
+        <item name="colorOnPrimary">@color/white_50</item>
+        <item name="colorOnSecondary">@color/black_900</item>
+        <item name="colorOnBackground">@color/black_900</item>
+        <item name="colorOnSurface">@color/black_900</item>
+        <item name="colorOnError">@color/white_50</item>
+        <!--Material type attributes-->
+        <item name="textAppearanceHeadline1">@style/TextAppearance.Aphid.Headline1</item>
+        <item name="textAppearanceHeadline2">@style/TextAppearance.Aphid.Headline2</item>
+        <item name="textAppearanceHeadline3">@style/TextAppearance.Aphid.Headline3</item>
+        <item name="textAppearanceHeadline4">@style/TextAppearance.Aphid.Headline4</item>
+        <item name="textAppearanceHeadline5">@style/TextAppearance.Aphid.Headline5</item>
+        <item name="textAppearanceHeadline6">@style/TextAppearance.Aphid.Headline6</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.Aphid.Subtitle1</item>
+        <item name="textAppearanceSubtitle2">@style/TextAppearance.Aphid.Subtitle2</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.Aphid.Body1</item>
+        <item name="textAppearanceBody2">@style/TextAppearance.Aphid.Body2</item>
+        <item name="textAppearanceButton">@style/TextAppearance.Aphid.Button</item>
+        <item name="textAppearanceCaption">@style/TextAppearance.Aphid.Caption</item>
+        <item name="textAppearanceOverline">@style/TextAppearance.Aphid.Overline</item>
+        <!--Material shape attributes-->
+        <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.Aphid.SmallComponent</item>
+        <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.Aphid.MediumComponent</item>
+        <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.Aphid.LargeComponent</item>
+        <!--Component styles-->
+        <item name="materialAlertDialogTheme">@style/ThemeOverlay.MaterialComponents.Dialog.Alert</item>
+        <item name="bottomSheetDialogTheme">@style/ThemeOverlay.Aphid.BottomSheetDialog</item>
+        <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.PrimarySurface</item>
     </style>
+
+    <!-- Base application theme. -->
+    <style name="Base.Theme.MaterialThemeBuilder" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:statusBarColor" tools:ignore="NewApi">?attr/colorSurface</item>
+        <item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
+        <item name="android:navigationBarColor" tools:ignore="NewApi">?android:attr/colorBackground</item>
+        <item name="android:windowLightNavigationBar" tools:ignore="NewApi">true</item>
+        <item name="android:navigationBarDividerColor" tools:ignore="NewApi">?attr/colorControlHighlight</item>
+    </style>
+
 </resources>
