Migrated from accompanist insets to window insets

--- a/base-android/src/main/res/values/themes.xml
+++ b/base-android/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
         </item>
         <item name="android:windowLightNavigationBar" tools:ignore="NewApi">true</item>
         <item name="android:navigationBarDividerColor" tools:ignore="NewApi">
-            ?attr/colorControlHighlight
+            ?android:attr/colorBackground
         </item>
     </style>
 
